# aresa

./: .cursorrules  .gitignore  Makefile  NEXT_STEPS.md  README.md
.cursor/modes/: testing-mode.md
.cursor/rules/: testing-enforcement.mdc
.github/workflows/: ci-cli.yml  release-cli.yml
apps/aresa-studio/: BUILD_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION.md  MASTER_PLAN.md  PLAN.md  README.html  README.md  READY_TO_TEST.md  next.config.ts  package-lock.json  package.json
apps/aresa-studio/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/aresa-studio/app/connections/: page.tsx
apps/aresa-studio/app/help/: page.tsx
apps/aresa-studio/app/history/: page.tsx
apps/aresa-studio/app/query/: page.tsx
apps/aresa-studio/app/schema/: page.tsx
apps/aresa-studio/app/settings/: page.tsx
apps/aresa-studio/app/terminal/: page.tsx
apps/aresa-studio/components/: ConnectionCard.tsx  DemoTerminal.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  QueryTabs.tsx  ResultsTable.tsx  Sidebar.tsx  StatCard.tsx  Terminal.tsx
apps/aresa-studio/lib/: api.ts  connection-state.ts
apps/aresa-studio/public/: manifest.json
apps/aresa-studio/test-env/: Makefile  README.md  docker-compose.yml  run-tests.sh  setup-test-connections.sh
apps/aresa-studio/test-env/clickhouse/: init.sql  users.xml
apps/aresa-studio/test-env/mock-cloud/: Dockerfile  requirements.txt  server.py
apps/aresa-studio/test-env/mysql/: init.sql
apps/aresa-studio/test-env/postgres/: init.sql
apps/aresadb-studio/: ENV_EXAMPLE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
apps/aresadb-studio/.aresadb-kb-cache/: clinical_trials.json  fda_drugs.json  omim.json  pubmed.json
apps/aresadb-studio/app/: globals.css  layout.tsx  page.tsx
apps/aresadb-studio/app/benchmarks/: page.tsx
apps/aresadb-studio/app/playground/: page.tsx
apps/aresadb-studio/app/query/: page.tsx
apps/aresadb-studio/app/rag/: page.tsx
apps/aresadb-studio/lib/: demo-data.ts  store.ts  theme.tsx  utils.ts
apps/aresadb-studio/public/: manifest.json
apps/aresadb-studio/scripts/: load-demo-data.ts
apps/aresalab/: package-lock.json  package.json  tsconfig.json  vercel.json
apps/aresalab/app/: globals.css  layout.tsx  page.tsx
apps/aresalab/lib/: mdx.ts  publications.ts
apps/aresalab/public/: manifest.json
apps/fire-safety/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
apps/fire-safety/app/: layout.tsx  page-old.tsx  page.tsx
apps/fire-safety/lib/: duckdb-service.ts  fireData.ts  useHybridData.ts
apps/fire-safety/public/: manifest.json
apps/fire-safety/scripts/: convert-to-parquet.py  precompute-aggregations.ts
docs/: fire-safety.html  index.html  manufacturing.html  network.html  spotify.html
publications/fire_safety_dashboard/: _quarto.yml
publications/manufacturing_analytics/: _quarto.yml
publications/network_analysis/: _quarto.yml
publications/spotify_popularity/: _quarto.yml
scripts/: generate_mdx_previews.py
tools/aresa-cli/: CONTRIBUTING.md  Cargo.toml  README.md  UI_GUIDE.md
tools/aresa-cli/homebrew/: README.md  aresa-cli.rb  aresa.rb
tools/aresa-cli/src/: history.rs  lib.rs  main.rs  server.rs  terminal.rs
tools/aresa-cli/src/config/: credentials.rs  mod.rs  sources.rs  tests.rs
tools/aresa-cli/src/connectors/: bigquery.rs  clickhouse.rs  databricks.rs  filesystem.rs  gcs.rs  mod.rs  postgres.rs  s3.rs  snowflake.rs  sqlite.rs  tests.rs
tools/aresa-cli/src/output/: mod.rs  table.rs
tools/aresa-cli/src/query/: executor.rs
tools/aresa-cli/tests/: database_tests.rs  integration_tests.rs  mock_tests.rs
tools/aresadb/: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TODO.md  docker-compose.yml
tools/aresadb/.github/: PULL_REQUEST_TEMPLATE.md
tools/aresadb/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/aresadb/.github/workflows/: ci.yml
tools/aresadb/benches/: distributed_bench.rs  query_bench.rs  storage_bench.rs
tools/aresadb/demo_db/.aresadb/: config.toml  data.redb
tools/aresadb/examples/: fire_safety_test.rs
tools/aresadb/scripts/: compare_duckdb.py  compare_pandas.py  compare_sqlite.py  run_comparisons.sh
tools/aresadb/src/: lib.rs  main.rs
tools/aresadb/src/ai/: migration_suggest.rs  mod.rs  nlp.rs
tools/aresadb/src/cli/: commands.rs  config.rs  mod.rs  repl.rs
tools/aresadb/src/client/: builder.rs  connection.rs  mod.rs
tools/aresadb/src/distributed/: bloom.rs  compression.rs  mod.rs  replication.rs  shard.rs  streaming.rs  wal.rs
tools/aresadb/src/output/: mod.rs  table.rs
tools/aresadb/src/query/: executor.rs  mod.rs  parser.rs  planner.rs
tools/aresadb/src/rag/: chunker.rs  context.rs  embeddings.rs  hybrid.rs  mod.rs
tools/aresadb/src/schema/: migration.rs  mod.rs  registry.rs
tools/aresadb/src/server/: handler.rs  mod.rs  pool.rs  protocol.rs
tools/aresadb/src/storage/: bucket.rs  cache.rs  local.rs  mod.rs  node.rs  parallel.rs  vector.rs  vector_index.rs
tools/aresadb/tests/: integration_tests.rs  property_tests.rs  stress_tests.rs
tools/aresadb/tests/common/: mod.rs
tools/aresadb/webui/: app.js  index.html  styles.css
(+115 files in other folders)
