[package]
name = "aresa-cli"
version = "0.2.0"
edition = "2021"
authors = ["Yevheniy Chuba <yevheniyc@gmail.com>"]
description = "Fast, beautiful interface to query any database"
license = "MIT"
repository = "https://github.com/yoreai/aresa"
keywords = ["cli", "database", "bigquery", "postgres", "sql"]
categories = ["command-line-utilities", "database"]

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client (for BigQuery REST API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database Connectors
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "mysql", "chrono", "uuid"] }

# Filesystem Search
walkdir = "2.4"
glob = "0.3"
regex = "1.10"

# Git
git2 = "0.18"

# Secure Credential Storage
keyring = "2.3"

# Configuration
directories = "5.0"

# Beautiful Output
colored = "2.1"
tabled = "0.14"

# Web Server (optional, for UI mode)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
include_dir = { version = "0.7", optional = true }
portable-pty = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }

# Error Handling
anyhow = "1.0"

# Misc
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
urlencoding = "2.1"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "mysql", "redis", "mongo"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = []
ui = ["axum", "tower", "tower-http", "tokio-tungstenite", "include_dir", "portable-pty", "futures-util"]

[[bin]]
name = "aresa"
path = "src/main.rs"
